# Composer-Hardware

./: Makefile  README.md  build.sbt  guide.md  setup.sh
composer/src/main/resources/fpnew_scripts/: FPNewBlackbox.sv  FPNewBlackbox_B1l0s.preprocessed.v  FPNewBlackbox_B1l0s.sv  (+39 more)
scripts/: composerToTL.patch  setup.sh  tune.py
src/main/scala/beethoven/: AcceleratorConfig.scala  AcceleratorCore.scala  AcceleratorSystemConfig.scala  BParams.scala  BeethovenParams.scala  CommunicationDegree.scala  Driver.scala  IntraCoreMemoryPortInConfig.scala  IntraCoreMemoryPortOutConfig.scala  MemoryParams.scala  ReadChannelConfig.scala  ScratchpadConfig.scala  WriteChannelConfig.scala  package.scala
src/main/scala/composer/: Accelerator.scala  ComposerCore.scala  ComposerParams.scala  ComposerSystem.scala  ComposerTop.scala  ConstraintGeneration.scala  CppGeneration.scala  Driver.scala  PlatformParams.scala  TestDriver.scala  package.scala
src/main/scala/design/: DesignConfigs.scala  ExampleConfigs.scala  Examples.scala  Gemm.scala  GemmFloat.scala  LFSRCore.scala  SimpleALU.scala  TestDriver.scala  VectorAdder.scala  myCore.scala
src/test/scala/: ACETester.scala  BaseTest.scala  MemCpyRTL.scala  MemCpyRTLMultiCore.scala  MemReadRTL.scala  myCore.scala
src/test/scala/basic/: Memcpy.scala  Memcpy2.scala  MyAccelerator.scala  MyAcceleratorConfig.scala  VectorAdd.scala
vsim/: Makefile  build_cmove.sh  move_ddr.sh
vsim/examples/: CMakeLists.txt  README.md  allocate_test.cc  alu_test.cc  lfsrtest.cpp  vector.cc
vsim/old/: cmove.sh  move-to-build.sh  move-to-sim.sh  move.sh
(+338 files in other folders)
